added showpointsdate